project section complete

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>List of My Stuff</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -85,7 +85,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Click the button below</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -96,54 +96,54 @@
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<p>My most recent projects</p>
 					</header>
 					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
+						<div class="col-4 col-6-medium col-12-large">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/tanveersaleem786/UI-III-Flexbox.git" class="image featured"><img src="images/great-idea.jpg" alt="" /></a>
+								<h3><a href="https://github.com/tanveersaleem786/UI-III-Flexbox.git">Great Idea</a></h3>
+								<p>Great Idea Project.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/tanveersaleem786/Sprint-Challenge--User-Interface.git" class="image featured"><img src="images/lambda.jpg" alt="" /></a>
+								<h3><a href="https://github.com/tanveersaleem786/Sprint-Challenge--User-Interface.git">Lambda Project</a></h3>
+								<p>My First Project at Lambda</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/tanveersaleem/pen/wvwVxXZ" class="image featured"><img src="images/codepen3.jpg" alt="" /></a>
+								<h3><a href="https://codepen.io/tanveersaleem/pen/wvwVxXZ">Sweet Bakery</a></h3>
+								<p>My Sweet Bakery Project</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/tanveersaleem/pen/YzzXyZy" class="image featured"><img src="images/codepen1.jpg" alt="" /></a>
+								<h3><a href="https://codepen.io/tanveersaleem/pen/YzzXyZy">Template</a></h3>
+								<p>Template Setting</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/tanveersaleem/pen/JjjPvYO" class="image featured"><img src="images/codepen2.jpg" alt="" /></a>
+								<h3><a href="https://codepen.io/tanveersaleem/pen/JjjPvYO">UI-Flexbox</a></h3>
+								<p>Flexbox Practice</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/tanveersaleem/pen/XveyMB" class="image featured"><img src="images/codepen4.jpg" alt="" /></a>
+								<h3><a href="https://codepen.io/tanveersaleem/pen/XveyMB">Content Alignment</a></h3>
+								<p>Content Alignment using inline</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Click the button below for any feedback</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -154,7 +154,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<p>Fill out the form below.</p>
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -185,13 +185,14 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.facebook.com/tanveerrose" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/tanveer-saleem-9222813a/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/tanveersaleem786" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>								
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>								
 								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
