Javascript validation add on contact form for streatch task

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Fill out the form below.</p>
+						<p>Fill out the form below.</p>						
+						<div id="errMessage"></div>
 					</header>
 					<div class="row">
 						<div class="col-12">
